# automobil

./: .gitignore  README.md  chat.py  pyproject.toml
automobil/: settings.py
automobil/cli/: __main__.py  commands.py
automobil/database/: models.py  types.py
automobil/mcp/: client.py
automobil/mcp/server/: tools.py
